--- a/UpdateDisplay.service
+++ b/UpdateDisplay.service
@@ -3,6 +3,7 @@ Description=Fetch and display the latest data
 
 [Service]
 Type=oneshot
+EnvironmentFile=/etc/docker.env
 ExecStart=/bin/bash /app/update.sh
 
 [Install]
